# coin-flip-streaks-rs

./: Cargo.toml  README.md
benches/: coin_flip_streaks.rs
src/: lib.rs  main.rs
