[package]
name = "coin_flip_streaks"
version = "0.1.0"
authors = ["cor <cor@pruijs.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
criterion = "0.3.1"

[[bench]]
name = "coin_flip_streaks"
harness = false